<resources>
    <string name="app_name">Pointy Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="no_data">No data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="select_priority">Select Priority</string>
    <string name="this_is_your_to_do_list">This is your to-do list.</string>
    <string name="share">Share</string>
    <string name="share_text">Share your note</string>
    <string name="share_method">Choose sharing method</string>
    <string name="date">Date</string>

    <string-array name="priorities">
        <item>Priority High</item>
        <item>Priority Normal</item>
        <item>Priority Low</item>
    </string-array>
</resources>